--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "@tdqs/koa-api",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "基于koa的api中间件",
   "main": "dist/index.js",
   "scripts": {
     "dev": "nodemon ./tests/server",
-    "build": "npm run clean && tsc --build tsconfig.json",
+    "build": "tsc --build tsconfig.json",
     "clean": "rimraf dist",
-    "publish": "npm config set registry https://registry.npmjs.org && npm publish --access public && npm config set registry https://registry.npm.taobao.org/"
+    "set:npm": "npm config set registry https://registry.npmjs.org",
+    "set:taobao": "npm config set registry https://registry.npm.taobao.org",
+    "publish": "npm publish --access public",
+    "upload": "npm-run-all --serial clean build set:npm publish set:taobao"
   },
   "keywords": [
     "koa-api",
