--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tdqs/koa-api",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "基于koa的api中间件",
   "main": "dist/index.js",
   "scripts": {
@@ -30,7 +30,8 @@
   "dependencies": {
     "ajv": "^6.6.2",
     "koa-body": "^4.0.4",
-    "koa-compose": "^4.1.0"
+    "koa-compose": "^4.1.0",
+    "koa-send": "^5.0.0"
   },
   "devDependencies": {
     "@types/koa": "^2.0.47",
@@ -39,7 +40,6 @@
     "@types/node": "^10.12.15",
     "koa": "^2.6.2",
     "koa-logger": "^3.2.0",
-    "koa-send": "^5.0.0",
     "ts-node": "^7.0.1",
     "typescript": "^3.2.2"
   }
