--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tdqs/koa-api",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "基于koa的api中间件",
   "main": "dist/index.js",
   "scripts": {
@@ -28,6 +28,7 @@
   "author": "gzq",
   "license": "MIT",
   "dependencies": {
+    "@tdqs/koa-static": "^0.0.2",
     "ajv": "^6.6.2",
     "koa-body": "^4.0.4",
     "koa-compose": "^4.1.0",
@@ -37,7 +38,7 @@
     "@types/koa": "^2.0.47",
     "@types/koa-compose": "^3.2.2",
     "@types/koa-send": "^4.1.1",
-    "@types/node": "^10.12.15",
+    "@types/node": "^10.12.17",
     "koa": "^2.6.2",
     "koa-logger": "^3.2.0",
     "ts-node": "^7.0.1",
