--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "set:npm": "npm config set registry https://registry.npmjs.org",
     "set:taobao": "npm config set registry https://registry.npm.taobao.org",
     "publish": "npm publish --access public",
-    "upload": "npm-run-all --serial clean build set:npm publish set:taobao"
+    "upload": "npm-run-all --serial clean build set:npm"
   },
   "keywords": [
     "koa-api",
