--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@tdqs/koa-api",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "基于koa的api中间件",
-  "main": "dist/index.js",
+  "main": "index.js",
   "scripts": {
     "dev": "nodemon ./tests/server",
     "build": "tsc --build tsconfig.json",
