--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
   "name": "@tdqs/koa-api",
-  "version": "0.2.4",
+  "version": "0.2.5",
   "description": "基于koa的api中间件",
   "main": "dist/index.js",
   "scripts": {
     "dev": "nodemon ./tests/server",
     "build": "tsc --build tsconfig.json",
     "clean": "rimraf dist",
-    "set:npm": "npm config set registry https://registry.npmjs.org",
-    "set:taobao": "npm config set registry https://registry.npm.taobao.org",
-    "publish": "npm publish --access public",
-    "upload": "npm-run-all --serial clean build set:npm"
+    "publish": "npm --registry https://registry.npmjs.org publish --access public",
+    "upload": "npm-run-all --serial clean build publish"
   },
   "keywords": [
     "koa-api",
@@ -40,8 +38,6 @@
     "@types/koa-send": "^4.1.1",
     "@types/node": "^10.12.17",
     "koa": "^2.6.2",
-    "koa-logger": "^3.2.0",
-    "ts-node": "^7.0.1",
-    "typescript": "^3.2.2"
+    "koa-logger": "^3.2.0"
   }
 }
