--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tdqs/koa-api",
-  "version": "0.2.5",
+  "version": "0.3.0",
   "description": "基于koa的api中间件",
   "main": "dist/index.js",
   "scripts": {
@@ -28,16 +28,18 @@
   "dependencies": {
     "@tdqs/koa-static": "^0.0.3",
     "ajv": "^6.6.2",
-    "koa-body": "^4.0.4",
+    "koa-body": "^4.0.6",
     "koa-compose": "^4.1.0",
-    "koa-send": "^5.0.0"
+    "koa-send": "^5.0.0",
+    "@types/koa-send": "^4.1.1"
   },
   "devDependencies": {
     "@types/koa": "^2.0.47",
     "@types/koa-compose": "^3.2.2",
-    "@types/koa-send": "^4.1.1",
-    "@types/node": "^10.12.17",
+    "@types/node": "^10.12.18",
     "koa": "^2.6.2",
-    "koa-logger": "^3.2.0"
+    "koa-logger": "^3.2.0",
+    "ts-node": "^7.0.1",
+    "typescript": "^3.2.2"
   }
 }
