--- a/shrinkwrap.yaml
+++ b/shrinkwrap.yaml
@@ -1,16 +1,18 @@
 dependencies:
   '@tdqs/koa-static': 0.0.3
+  '@types/koa-send': 4.1.1
   ajv: 6.6.2
-  koa-body: 4.0.4
+  koa-body: 4.0.6
   koa-compose: 4.1.0
   koa-send: 5.0.0
 devDependencies:
   '@types/koa': 2.0.47
   '@types/koa-compose': 3.2.2
-  '@types/koa-send': 4.1.1
   '@types/node': 10.12.18
   koa: 2.6.2
   koa-logger: 3.2.0
+  ts-node: 7.0.1
+  typescript: 3.2.2
 packages:
   /@tdqs/koa-static/0.0.3:
     dependencies:
@@ -22,7 +24,6 @@ packages:
   /@types/accepts/1.3.5:
     dependencies:
       '@types/node': 10.12.18
-    dev: true
     resolution:
       integrity: sha1-w0vsEVz8dG4E/loFnfTOfns5FXU=
       tarball: 'http://registry.npm.taobao.org/@types/accepts/download/@types/accepts-1.3.5.tgz'
@@ -30,14 +31,12 @@ packages:
     dependencies:
       '@types/connect': 3.4.32
       '@types/node': 10.12.18
-    dev: true
     resolution:
       integrity: sha1-n1ydm9BLtUvjLV65/A2Ml05s9Yw=
       tarball: 'http://registry.npm.taobao.org/@types/body-parser/download/@types/body-parser-1.17.0.tgz'
   /@types/connect/3.4.32:
     dependencies:
       '@types/node': 10.12.18
-    dev: true
     resolution:
       integrity: sha1-qg6WFrlDXMrQK8UrW0VP/Cxwuig=
       tarball: 'http://registry.npm.taobao.org/@types/connect/download/@types/connect-3.4.32.tgz'
@@ -47,7 +46,6 @@ packages:
       '@types/express': 4.16.0
       '@types/keygrip': 1.0.1
       '@types/node': 10.12.18
-    dev: true
     resolution:
       integrity: sha1-+fIEvWdn04nuo7h2CeMMCQx3pUA=
       tarball: 'http://registry.npm.taobao.org/@types/cookies/download/@types/cookies-0.7.1.tgz'
@@ -60,7 +58,6 @@ packages:
       '@types/events': 1.2.0
       '@types/node': 10.12.18
       '@types/range-parser': 1.2.3
-    dev: true
     resolution:
       integrity: sha1-/f53dZTdwf6OuOzM5S4mG0luQ+c=
       tarball: 'http://registry.npm.taobao.org/@types/express-serve-static-core/download/@types/express-serve-static-core-4.16.0.tgz'
@@ -69,7 +66,6 @@ packages:
       '@types/body-parser': 1.17.0
       '@types/express-serve-static-core': 4.16.0
       '@types/serve-static': 1.13.2
-    dev: true
     resolution:
       integrity: sha1-bYvELMqm81zymit8MzPLR7WjKhk=
       tarball: 'http://registry.npm.taobao.org/@types/express/download/@types/express-4.16.0.tgz'
@@ -82,24 +78,21 @@ packages:
       integrity: sha1-J0+dwtChqc4f7vSMJMoIWefslHs=
       tarball: 'http://registry.npm.taobao.org/@types/formidable/download/@types/formidable-1.0.31.tgz'
   /@types/http-assert/1.3.0:
-    dev: true
     resolution:
       integrity: sha1-XpMmBhU9oo4dBPkEP0kSz2H9Vd0=
       tarball: 'http://registry.npm.taobao.org/@types/http-assert/download/@types/http-assert-1.3.0.tgz'
   /@types/keygrip/1.0.1:
-    dev: true
     resolution:
       integrity: sha1-/1QEYtL7TQqIRBzq8n0oewHD2Hg=
       tarball: 'http://registry.npm.taobao.org/@types/keygrip/download/@types/keygrip-1.0.1.tgz'
   /@types/koa-compose/3.2.2:
-    dev: true
     resolution:
       integrity: sha1-3BBuAAu/kqOskA91bfRzRIh+6Ec=
       tarball: 'http://registry.npm.taobao.org/@types/koa-compose/download/@types/koa-compose-3.2.2.tgz'
   /@types/koa-send/4.1.1:
     dependencies:
       '@types/koa': 2.0.47
-    dev: true
+    dev: false
     resolution:
       integrity: sha1-iPV8vgNDyCBJA/kJbY/2uY7DKW8=
       tarball: 'http://registry.npm.taobao.org/@types/koa-send/download/@types/koa-send-4.1.1.tgz'
@@ -111,12 +104,10 @@ packages:
       '@types/keygrip': 1.0.1
       '@types/koa-compose': 3.2.2
       '@types/node': 10.12.18
-    dev: true
     resolution:
       integrity: sha1-rHhUOEpMxJwWWTyGrNmeY2pIFCo=
       tarball: 'http://registry.npm.taobao.org/@types/koa/download/@types/koa-2.0.47.tgz'
   /@types/mime/2.0.0:
-    dev: true
     resolution:
       integrity: sha1-WnMG42fFObn2VDSZ3o3VGfrDeos=
       tarball: 'http://registry.npm.taobao.org/@types/mime/download/@types/mime-2.0.0.tgz'
@@ -125,7 +116,6 @@ packages:
       integrity: sha1-HTynZHGJFVhPzZ9jRGIbdnJmXGc=
       tarball: 'http://registry.npm.taobao.org/@types/node/download/@types/node-10.12.18.tgz'
   /@types/range-parser/1.2.3:
-    dev: true
     resolution:
       integrity: sha1-fuMwunyq+5gJC+zoal7kQRWQTCw=
       tarball: 'http://registry.npm.taobao.org/@types/range-parser/download/@types/range-parser-1.2.3.tgz'
@@ -133,7 +123,6 @@ packages:
     dependencies:
       '@types/express-serve-static-core': 4.16.0
       '@types/mime': 2.0.0
-    dev: true
     resolution:
       integrity: sha1-9axNemQgqZpqRa9HGfTc2M2Qekg=
       tarball: 'http://registry.npm.taobao.org/@types/serve-static/download/@types/serve-static-1.13.2.tgz'
@@ -175,6 +164,18 @@ packages:
     resolution:
       integrity: sha1-q8av7tzqUugJzcA3au0845Y10X8=
       tarball: 'http://registry.npm.taobao.org/any-promise/download/any-promise-1.3.0.tgz'
+  /arrify/1.0.1:
+    dev: true
+    engines:
+      node: '>=0.10.0'
+    resolution:
+      integrity: sha1-iYUI2iIm84DfkEcoRWhJwVAaSw0=
+      tarball: 'http://registry.npm.taobao.org/arrify/download/arrify-1.0.1.tgz'
+  /buffer-from/1.1.1:
+    dev: true
+    resolution:
+      integrity: sha1-MnE7wCj3XAL9txDXx7zsHyxgcO8=
+      tarball: 'http://registry.npm.taobao.org/buffer-from/download/buffer-from-1.1.1.tgz'
   /bytes/2.5.0:
     dev: true
     engines:
@@ -291,6 +292,13 @@ packages:
     resolution:
       integrity: sha1-l4hXRCxEdJ5CBmE+N5RiBYJqvYA=
       tarball: 'http://registry.npm.taobao.org/destroy/download/destroy-1.0.4.tgz'
+  /diff/3.5.0:
+    dev: true
+    engines:
+      node: '>=0.3.1'
+    resolution:
+      integrity: sha1-gAwN0eCov7yVg1wgKtIg/jF+WhI=
+      tarball: 'http://registry.npm.taobao.org/diff/download/diff-3.5.0.tgz'
   /ee-first/1.1.1:
     dev: true
     resolution:
@@ -422,15 +430,15 @@ packages:
     resolution:
       integrity: sha1-OZ1wnwrtK6sKBZ4M3TpQI6BT4dw=
       tarball: 'http://registry.npm.taobao.org/keygrip/download/keygrip-1.0.3.tgz'
-  /koa-body/4.0.4:
+  /koa-body/4.0.6:
     dependencies:
       '@types/formidable': 1.0.31
       co-body: 5.2.0
       formidable: 1.2.1
     dev: false
     resolution:
-      integrity: sha1-cMBLohs38jBHbCgKQYWNw3yoOO4=
-      tarball: 'http://registry.npm.taobao.org/koa-body/download/koa-body-4.0.4.tgz'
+      integrity: sha1-GwRA6tUlMJ6oDj2B9z6iiJzkMTw=
+      tarball: 'http://registry.npm.taobao.org/koa-body/download/koa-body-4.0.6.tgz'
   /koa-compose/3.2.1:
     dependencies:
       any-promise: 1.3.0
@@ -513,6 +521,11 @@ packages:
     resolution:
       integrity: sha1-V7pNBJsKmcrg1ZTmFE4pMZSafOE=
       tarball: 'http://registry.npm.taobao.org/koa/download/koa-2.6.2.tgz'
+  /make-error/1.3.5:
+    dev: true
+    resolution:
+      integrity: sha1-7+ToH22yjK3WBccPKcgxtY73dsg=
+      tarball: 'http://registry.npm.taobao.org/make-error/download/make-error-1.3.5.tgz'
   /media-typer/0.3.0:
     engines:
       node: '>= 0.6'
@@ -533,6 +546,24 @@ packages:
     resolution:
       integrity: sha1-KJlaoey3cHQv5q5+WPkYHHRLP5Y=
       tarball: 'http://registry.npm.taobao.org/mime-types/download/mime-types-2.1.21.tgz'
+  /minimist/0.0.8:
+    dev: true
+    resolution:
+      integrity: sha1-hX/Kv8M5fSYluCKCYuhqp6ARsF0=
+      tarball: 'http://registry.npm.taobao.org/minimist/download/minimist-0.0.8.tgz'
+  /minimist/1.2.0:
+    dev: true
+    resolution:
+      integrity: sha1-o1AIsg9BOD7sH7kU9M1d95omQoQ=
+      tarball: 'http://registry.npm.taobao.org/minimist/download/minimist-1.2.0.tgz'
+  /mkdirp/0.5.1:
+    dependencies:
+      minimist: 0.0.8
+    dev: true
+    hasBin: true
+    resolution:
+      integrity: sha1-MAV0OOrGz3+MR2fzhkjWaX11yQM=
+      tarball: 'http://registry.npm.taobao.org/mkdirp/download/mkdirp-0.5.1.tgz'
   /ms/2.0.0:
     dev: true
     resolution:
@@ -649,6 +680,21 @@ packages:
     resolution:
       integrity: sha1-0L2FU2iHtv58DYGMuWLZ2RxU5lY=
       tarball: 'http://registry.npm.taobao.org/setprototypeof/download/setprototypeof-1.1.0.tgz'
+  /source-map-support/0.5.9:
+    dependencies:
+      buffer-from: 1.1.1
+      source-map: 0.6.1
+    dev: true
+    resolution:
+      integrity: sha1-QbyVOyU0Jn6i1gW8z6e/oxEc7V8=
+      tarball: 'http://registry.npm.taobao.org/source-map-support/download/source-map-support-0.5.9.tgz'
+  /source-map/0.6.1:
+    dev: true
+    engines:
+      node: '>=0.10.0'
+    resolution:
+      integrity: sha1-dHIq8y6WFOnCh6jQu95IteLxomM=
+      tarball: 'http://registry.npm.taobao.org/source-map/download/source-map-0.6.1.tgz'
   /statuses/1.5.0:
     engines:
       node: '>= 0.6'
@@ -693,6 +739,23 @@ packages:
     resolution:
       integrity: sha1-fhvjRw8ed5SLxD2Uo8j013UrpVM=
       tarball: 'http://registry.npm.taobao.org/toidentifier/download/toidentifier-1.0.0.tgz'
+  /ts-node/7.0.1:
+    dependencies:
+      arrify: 1.0.1
+      buffer-from: 1.1.1
+      diff: 3.5.0
+      make-error: 1.3.5
+      minimist: 1.2.0
+      mkdirp: 0.5.1
+      source-map-support: 0.5.9
+      yn: 2.0.0
+    dev: true
+    engines:
+      node: '>=4.2.0'
+    hasBin: true
+    resolution:
+      integrity: sha1-lWLcLR5tJI0kvFX3c+P2FDN9m68=
+      tarball: 'http://registry.npm.taobao.org/ts-node/download/ts-node-7.0.1.tgz'
   /type-is/1.6.16:
     dependencies:
       media-typer: 0.3.0
@@ -702,6 +765,14 @@ packages:
     resolution:
       integrity: sha1-+JzjQVQcZysl7nrjxz3uOyvlAZQ=
       tarball: 'http://registry.npm.taobao.org/type-is/download/type-is-1.6.16.tgz'
+  /typescript/3.2.2:
+    dev: true
+    engines:
+      node: '>=4.2.0'
+    hasBin: true
+    resolution:
+      integrity: sha1-/oEBxGqhI/g1NSPr3PVzDCrkk+U=
+      tarball: 'http://registry.npm.taobao.org/typescript/download/typescript-3.2.2.tgz'
   /unpipe/1.0.0:
     dev: false
     engines:
@@ -730,6 +801,13 @@ packages:
     resolution:
       integrity: sha1-9Xa2M0FUeYnB3nuiiHYJI7J/6E8=
       tarball: 'http://registry.npm.taobao.org/ylru/download/ylru-1.2.1.tgz'
+  /yn/2.0.0:
+    dev: true
+    engines:
+      node: '>=4'
+    resolution:
+      integrity: sha1-5a2ryKz0CPY4X8dklWhMiOavaJo=
+      tarball: 'http://registry.npm.taobao.org/yn/download/yn-2.0.0.tgz'
 registry: 'https://registry.npm.taobao.org/'
 shrinkwrapMinorVersion: 9
 shrinkwrapVersion: 3
@@ -738,10 +816,12 @@ specifiers:
   '@types/koa': ^2.0.47
   '@types/koa-compose': ^3.2.2
   '@types/koa-send': ^4.1.1
-  '@types/node': ^10.12.17
+  '@types/node': ^10.12.18
   ajv: ^6.6.2
   koa: ^2.6.2
-  koa-body: ^4.0.4
+  koa-body: ^4.0.6
   koa-compose: ^4.1.0
   koa-logger: ^3.2.0
   koa-send: ^5.0.0
+  ts-node: ^7.0.1
+  typescript: ^3.2.2
